tooling/nargo_cli/tests/snapshots/execution_success/reference_only_used_as_alias/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [Field; 4], v1: Field, v2: u32):
    (no terminator instruction)
}
